# blokus

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: ActiveGame.hpp  ActiveGameManager.hpp  AddPiece.hpp  BlokusCompressionEngine.hpp  Board.hpp  BroadcastPlayerMove.hpp  BuildGamePieces.hpp  CalculatePadding.hpp  CalculatePieceScore.hpp  ChatRequest.hpp  ChatRequestData.hpp  ChatRoom.hpp  CheckBoundaries.hpp  ClearBoard.hpp  DrawBoard.hpp  DrawGamePieces.hpp  DrawPiecesOnBoard.hpp  FindGame.hpp  Game.hpp  GameBoard.hpp  GameConfiguration.hpp  GameFlowManager.hpp  GameLobby.hpp  GameLobbyScreen.hpp  GameMode.hpp  GameNotification.hpp  GamePieceBank.hpp  GameScreen.hpp  GridSquare.hpp  GridSquareString.hpp  InitialMoveIndicator.hpp  JoinGame.hpp  JoinLobby.hpp  Layout.hpp  ManipulatePiece.hpp  MergeBoards.hpp  Message.hpp  MessageBase.hpp  MessageProcessor.hpp  MessageType.hpp  (+48 more)
interface/: IChatMessage.hpp  IChatRequest.hpp  IChatRequestData.hpp  ICompress.hpp  IDecompress.hpp  IGameLobby.hpp  IGameSettings.hpp  IMessage.hpp  IMessageBase.hpp  IMessageProcessor.hpp  INetworkConfigure.hpp  INetworkConnection.hpp  INetworkLobby.hpp  INetworkReceive.hpp  INetworkSearch.hpp  INetworkSend.hpp  IPlayerMoveMessage.hpp  IPlayerMoveRequest.hpp  IPlayerMoveRequestData.hpp  IPlayerRegistry.hpp  IRandomizePlayerIds.hpp  IRegisterMessage.hpp  IRegisterRequest.hpp  IRegistrationSuccessful.hpp  IRegistrationUnsuccessful.hpp  IRequest.hpp  IStartGameMessage.hpp  IStartGameRequest.hpp  IStartGameRequestData.hpp
src/: ActiveGame.cpp  ActiveGameManager.cpp  BlokusCompressionEngine.cpp  Board.cpp  BroadcastPlayerMove.cpp  BuildGamePieces.cpp  ChatRequest.cpp  ChatRequestData.cpp  ChatRoom.cpp  FindGame.cpp  Game.cpp  GameFlowManager.cpp  GameLobby.cpp  GameLobbyScreen.cpp  GameNotification.cpp  GamePieceBank.cpp  GameScreen.cpp  InitialMoveIndicator.cpp  JoinGame.cpp  JoinLobby.cpp  Layout.cpp  Message.cpp  MessageBase.cpp  MessageProcessor.cpp  MoveablePiece.cpp  Network.cpp  NetworkConnection.cpp  OverlayBoard.cpp  Padding.cpp  Piece.cpp  PieceMove.cpp  PieceSelector.cpp  PiecesAvailableForPlayLocations.cpp  Player.cpp  PlayerManager.cpp  PlayerMoveRequest.cpp  PlayerMoveRequestData.cpp  PlayerScores.cpp  PlayerSelectedPiece.cpp  PlayerTurnManager.cpp  (+20 more)
src/protobuf/: blokus.proto
test/: TestSuiteCalculatePadding.cpp  TestSuiteChatRoom.cpp  TestSuiteGameFlowManager.cpp  TestSuiteGamePieceBank.cpp  TestSuiteLayout.cpp  TestSuiteMoveablePiece.cpp  TestSuitePadding.cpp  TestSuitePiece.cpp  TestSuitePieceSelector.cpp  TestSuitePlayerTurnManager.cpp  TestSuiteReadGameNotification.cpp  TestSuiteSetup.cpp  TestSuiteTask.cpp
test/mock/: MNetworkReceive.hpp
